# budget-executor

./: Cargo.toml  README.md
.rustme/: config.ron  docs.md  header.md
coverage/: index.html
coverage/examples/: blocking-runtime.rs.html  index.html  simple-async.rs.html  simple.rs.html
coverage/src/: asynchronous.rs.html  blocking.rs.html  index.html  lib.rs.html  replenishable.rs.html  spend.rs.html  tests.rs.html
examples/: blocking-runtime.rs  simple-async.rs  simple.rs
main/: crates.js  search-index.js  settings.html  source-files.js
main/budget_executor/: all.html  enum.Budget.html  fn.budget.html  fn.spend.html  index.html  sidebar-items.js  struct.BudgetContext.html  struct.BudgetResult.html  struct.ReplenishableBudget.html  struct.SpendBudget.html  trait.Budgetable.html
main/budget_executor/asynchronous/: enum.Progress.html  fn.run_with_budget.html  index.html  sidebar-items.js  struct.BudgetedFuture.html  struct.ContinueToCompletion.html  struct.IncompleteAsyncFuture.html  struct.WaitForBudgetFuture.html
main/budget_executor/blocking/: enum.Progress.html  fn.run_with_budget.html  index.html  sidebar-items.js  struct.IncompleteFuture.html  struct.Runtime.html  struct.TaskHandle.html
main/budget_executor/replenishable/: struct.ReplenishableBudget.html
main/budget_executor/spend/: index.html  sidebar-items.js
main/implementors/budget_executor/: trait.Budgetable.js
main/src/budget_executor/: asynchronous.rs.html  blocking.rs.html  lib.rs.html  (+2 more)
src/: .crate-docs.md  asynchronous.rs  blocking.rs  lib.rs  replenishable.rs  spend.rs  tests.rs
(+45 files in other folders)
